fix: set default z-index
closes #2

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -38,6 +38,8 @@ $o-header-dropdown-menu-item-height: 44px !default;
 $o-header-dropdown-menu-bg: $o-header-gray-70 !default;
 $o-header-dropdown-menu-hover-bg: $o-header-gray-60 !default;
 
+// z-index
+$o-header-z-index: 1000 !default;
 
 /// Responsive breakpoints
 
